redy for vercel deployemn

--- a/app/(path_begins)/flyer-design/flyerdesign.scss
+++ b/app/(path_begins)/flyer-design/flyerdesign.scss
@@ -128,7 +128,7 @@ svg{
       -webkit-background-clip: text;
       background-clip: text;
       -webkit-text-fill-color: transparent;
-      text-fill-color: transparent;
+      -text-fill-color: transparent;
       display: inline-block;
       font-size: 45px;
       font-weight: 700;
