--- a/style/home/_footer.scss
+++ b/style/home/_footer.scss
@@ -266,7 +266,7 @@
         font-family: 'Poppins', Sans-serif;
         font-size: 26px;
         font-weight: 700;
-        padding-top: 30px;
+        // padding-top: 30px;
     }
 
     h5 {
