--- a/style/home/_header.scss
+++ b/style/home/_header.scss
@@ -9,19 +9,19 @@
         color: #000;
         font-size: 14px;
     }
-    .Home-header-phn-ic svg {
-        background-image: linear-gradient(29deg, #a61131 0%, #262250 50%);
-        width: 30px;
-        height: 30px;
-        fill: #fff;
-        padding: 5px;
-        rotate: 89deg;
-        border-radius: 28px;
-    }
-    .home-header-phone-ic {
-        display: flex !important;
-        column-gap: 10px;
-    }
+    // .Home-header-phn-ic  {
+    //     background-image: linear-gradient(29deg, #a61131 0%, #262250 50%);
+    //     width: 30px;
+    //     height: 30px;
+    //     fill: #fff;
+    //     padding: 5px;
+    //     // rotate: 89deg;
+    //     border-radius: 28px;
+    // }
+    // .home-header-phone-ic {
+    //     display: flex !important;
+    //     column-gap: 10px;
+    // }
     .home-header-social-icons {
         svg {
             fill: #b1b1b1;
