--- a/style/home/_hero-sec.scss
+++ b/style/home/_hero-sec.scss
@@ -1,47 +1,53 @@
-.Hero-content{
-   h1{
-    font-size: 42px !important;
-    background: linear-gradient(to left, #262250 30%, #E40724);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    font-weight: 700 !important;
-    line-height: 55px !important;
-    font-family: "Poppins", Sans-serif;
-   
-   padding-bottom: 5px;
-   }
-   p{
-    font-size: 20px !important;
-    background: linear-gradient(to left, #262250 30%, #E40724);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    font-weight: 500 !important;
-    font-family: "Poppins", Sans-serif;
-    
-   }
+.Hero-content {
+    h1 {
+        font-size: 30px !important;
+        background: linear-gradient(to left, #262250 30%, #E40724);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        font-weight: 700 !important;
+        line-height: 55px !important;
+        font-family: "Poppins", Sans-serif;
+
+        padding-bottom: 5px;
+    }
+
+    p {
+        font-size: 15px !important;
+        background: linear-gradient(to left, #262250 30%, #E40724);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        font-weight: 500 !important;
+        font-family: "Poppins", Sans-serif;
+
+    }
+
+    // margin-top: 12px;
 
 
 }
-.service-icon{
+
+.service-icon {
     box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
-    padding: 15px 20px;
+    padding: 10px 10px;
     display: flex;
     border-radius: 10px;
     align-items: center;
     column-gap: 10px;
-    margin-top: 20px;
+    // margin-top: 20px;
 
-    svg{
+    svg {
         font-size: 40px;
-        fill:#0E1839;
+        fill: #0E1839;
     }
-    h4{
+
+    h4 {
         font-size: 14px;
-        color: #0E1839 !important; 
+        color: #0E1839 !important;
         text-transform: uppercase;
         font-weight: 400;
     }
 }
+
 // .crm-icn{
 //     padding-bottom: 20px !important;
 //     svg{
@@ -51,17 +57,23 @@
 .service-icon:hover {
     background: #0E1839;
 
-    svg{
-        fill:#fff;
-        color:#fff;
+    svg {
+        fill: #fff;
+        color: #fff;
     }
-    h4{
-        color:#fff !important;
+    img{
+         fill: #fff;
+        color: #fff;
+    }
+
+    h4 {
+        color: #fff !important;
     }
 }
-.quick-contactsec{
-margin-top:-100px;
-}
+
+// .quick-contactsec {
+//     margin-top: -125px;
+// }
 
 // image moving
 
@@ -69,47 +81,74 @@ margin-top:-100px;
 .robort {
     position: relative;
     overflow: hidden;
+
 }
 
 /* Style for the image */
 .robort img {
-    transition: transform 0.3s ease; /* Smooth transition */
-    width: 100%; /* Adjust as needed */
-    height: auto; /* Maintain aspect ratio */
+    transition: transform 0.3s ease;
+    /* Smooth transition */
+    height: "auto";
+    width: 1440px;
+    max-height: calc(100vh - 70px);
+    margin-right: auto;
+    /* Adjust as needed */
+    // height: auto;
+    /* Maintain aspect ratio */
 }
 
 /* Hover effect */
 .robort:hover img {
-    transform: translate(10px, -10px); /* Adjust the values as needed */
+    transform: translate(10px, -10px);
+    /* Adjust the values as needed */
 }
 
+.button-wrapper-s {
+    display: flex;
+    flex-direction: row;
+}
 
+.mb-rsbtn {
 
-@media screen and (max-width:768px){
-    .home-header-social-icons,  .mb-rsbtn{
-     display: none !important;
-    }
-    .home-header  .home-header-phone-ic{
+    // width: 167px;
+
+}
+
+@media screen and (max-width:768px) {
+
+    .home-header-social-icons,
+    .mb-rsbtn {
         display: none !important;
     }
-    .quick-contactsec{
-        margin-top:0px;
+
+    .home-header .home-header-phone-ic {
+        display: none !important;
     }
-    .quick-form form{
+
+    .quick-contactsec {
+        margin-top: 0px;
+    }
+
+    .quick-form form {
         display: block !important;
     }
-    .quick-form .infld input, .quick-form select{
-        width:100% !important;
+
+    .quick-form .infld input,
+    .quick-form select {
+        width: 100% !important;
         margin-bottom: 10px;
     }
-    .quick-form button{
+
+    .quick-form button {
         width: 100%;
         margin-top: 10px;
-        margin-bottom: 30px;  
+        margin-bottom: 30px;
     }
-    .industrial-iconbox{
-        display:block !important;
+
+    .industrial-iconbox {
+        display: block !important;
     }
+
     .industrial-service {
         width: 100% !important;
     }
@@ -117,67 +156,77 @@ margin-top:-100px;
 
 // Industries Serves
 
-.Industries-serv{
+.Industries-serv {
     // padding-top: 60px;
     // padding-bottom: 60px;
 
-    h2{
+    h2 {
         color: #000;
         font-family: "Poppins", Sans-serif;
         font-size: 30px;
         font-weight: 500;
     }
-    p{
-        font-size: 16px;
-        color:#7a7a7a;
+
+    p {
+        // font-size: 16px;
+        color: #7a7a7a;
         font-family: "Poppins", Sans-serif;
-        padding-top:20px;
+        padding-top: 20px;
     }
 }
-.industrial-iconbox{
+
+.industrial-iconbox {
     display: flex;
     column-gap: 10px;
 }
+
 .Industries-serv {
-    .col-md-3{
-        padding: 3px;;
+    .col-md-3 {
+        padding: 3px;
+        ;
     }
 }
+
 .industrial-service {
     box-shadow: 5px 5px 10px -6px rgba(0, 0, 0, 0.5);
     transition: background 0.3s, border 0.3s, border-radius 0.3s, box-shadow 0.3s;
-   
+
     border-radius: 10px;
-    
+
     text-align: center;
-   padding: 10px;
-   margin-top:20px;
-    img{
-    margin:auto;
+    padding: 10px;
+    margin-top: 20px;
+
+    img {
+        margin: auto;
     }
-   p{
-    color: #000;
-    font-family: "Poppins", Sans-serif;
-    font-size: 12px;
-    font-weight: 500;
-   }
+
+    p {
+        color: #000;
+        font-family: "Poppins", Sans-serif;
+        font-size: 12px;
+        font-weight: 500;
+    }
 }
 
 
-@media screen and (max-width:768px){
+@media screen and (max-width:768px) {
     .service-icon h4 {
-   display: none;
-}
-.service-icon{
-    justify-content: center;
-}
-.robort{
-    padding-top:40px;
-}
-.Hero-content h1 {
-font-size: 25px !important;
-line-height: 35px !important;
-}
+        display: none;
+    }
+
+    .service-icon {
+        justify-content: center;
+    }
+
+    .robort {
+        padding-top: 40px;
+    }
+
+    .Hero-content h1 {
+        font-size: 20px !important;
+        line-height: 30px !important;
+    }
 }
 
 
@@ -390,6 +439,3 @@ line-height: 35px !important;
 //         height: calc(100vh - 80px);
 //     }
 // }
-
-
-
