--- a/app/(path_begins)/refund-policy/return.scss
+++ b/app/(path_begins)/refund-policy/return.scss
@@ -1,12 +1,12 @@
-h2{
-    color: #000;
-    font-family: "Poppins", Sans-serif;
-    font-size: 30px;
-    font-weight: 600;
-}
-p{
-    color: #000;
-    font-family: "Poppins", Sans-serif;
-    font-size: 16px;
-    line-height: 30px;   
-}
+// h2{
+//     color: #000;
+//     font-family: "Poppins", Sans-serif;
+//     font-size: 30px;
+//     font-weight: 600;
+// }
+// p{
+//     color: #000;
+//     font-family: "Poppins", Sans-serif;
+//     font-size: 16px;
+//     line-height: 30px;   
+// }
