--- a/app/(path_begins)/woo-commerce/woocommerce.scss
+++ b/app/(path_begins)/woo-commerce/woocommerce.scss
@@ -132,37 +132,37 @@
 //         font-size: 20px;
 //     }
 // }
-// .looking-wecomm {
-//     background-color: transparent;
-//     background-image: linear-gradient(121deg, #e21c34 0%, #500b28 100%);
-//     padding-top: 60px;
-//     padding-bottom: 60px;
+.looking-wecomm {
+    background-color: transparent;
+    background-image: linear-gradient(121deg, #e21c34 0%, #500b28 100%);
+    padding-top: 60px;
+    padding-bottom: 60px;
 
-//     P {
-//         font-size: 18px;
-//         color: #fff;
-//     }
-//     button {
-//         background: #fff;
-//         font-size: #000;
-//         font-size: 18px;
-//         color: #000;
-//         font-weight: 500;
-//         padding: 10px 30px;
-//         border: 2px solid #fff;
-//     }
-//     button:hover {
-//         border: 2px solid #fff;
-//         background: transparent;
-//         color: #fff;
-//     }
-//     h2 {
-//         color: #fff;
-//         font-family: 'Poppins', Sans-serif;
-//         font-size: 45px;
-//         font-weight: 600;
-//     }
-// }
+    P {
+        font-size: 18px;
+        color: #fff;
+    }
+    button {
+        background: #fff;
+        font-size: #000;
+        font-size: 18px;
+        color: #000;
+        font-weight: 500;
+        padding: 10px 30px;
+        border: 2px solid #fff;
+    }
+    button:hover {
+        border: 2px solid #fff;
+        background: transparent;
+        color: #fff;
+    }
+    h2 {
+        color: #fff;
+        font-family: 'Poppins', Sans-serif;
+        font-size: 45px;
+        font-weight: 600;
+    }
+}
 
 // // Accordian
 
