--- a/app/(path_begins)/custom-web-design/custom-web-design.css
+++ b/app/(path_begins)/custom-web-design/custom-web-design.css
@@ -159,10 +159,11 @@
 .customwebdesignservices-card img {
     width: 100px;
     border-radius: 100%;
-    border: 10px solid #f5f5f5;
+    border: 5px solid #f5f5f5;
     background: #fff;
     box-shadow: 1px 0 5px #ccc;
     margin-bottom: 15px;
+    object-fit: cover;
 }
 
 .customwebdesignservices-card .text-area {
