--- a/app/(path_begins)/website-redesign/website-redesign.css
+++ b/app/(path_begins)/website-redesign/website-redesign.css
@@ -129,7 +129,7 @@
 }
 
 .benefitscard img {
-    width: 95px;
+    width: 50px;
     margin-bottom: 5px;
 }
 
@@ -138,6 +138,7 @@
     font-family: 'Poppins', Sans-serif;
     font-size: 24px;
     font-weight: 600;
+    text-align: center  ;
 }
 
 .benefitscard p {
