--- a/app/(path_begins)/custom-web-development/Customwebdevelopment.css
+++ b/app/(path_begins)/custom-web-development/Customwebdevelopment.css
@@ -82,7 +82,7 @@
 /* Customwebsite */
 
 .customwebsite-main {
-    padding: 60px 0px;
+    /* padding: 60px 0px; */
 }
 
 .customwebsite h2 {
@@ -102,7 +102,7 @@
 
 @media screen and (max-width: 767px) {
     .customwebsite-main {
-        padding: 30px 0px;
+        /* padding: 30px 0px; */
     }
 
     .customwebsite h2 {
@@ -112,7 +112,7 @@
 
 /* Createinteractive */
 .createinteractive h1 {
-    color: #e20825;
+    /* color: #e20825; */
     font-family: 'Poppins', Sans-serif;
     font-size: 20px;
     font-weight: 600;
@@ -138,14 +138,14 @@
     margin-right: auto;
 }
 
-@media screen and (max-width: 767px) {
+/* @media screen and (max-width: 767px) {
     .createinteractive h1 {
         font-size: 25px;
     }
     .createinteractive h2 {
         font-size: 25px;
     }
-}
+} */
 
 /* Customwebsitedevelopment */
 
