--- a/app/(path_begins)/ppc-service/ppc-service.css
+++ b/app/(path_begins)/ppc-service/ppc-service.css
@@ -86,7 +86,7 @@
 
 /* WhatarePPCServices */
 .whatarePPCServices-main {
-    padding: 60px 0px;
+    /* padding: 60px 0px; */
 }
 
 .whatarePPCServices h3 {
@@ -123,7 +123,7 @@
 
 @media screen and (max-width: 767px) {
     .whatarePPCServices-main {
-        padding: 30px 0px;
+        /* padding: 30px 0px; */
     }
 
     .whatarePPCServices h3 {
