services page responsive Completed

--- a/app/(path_begins)/android-app-development/android-app-development.css
+++ b/app/(path_begins)/android-app-development/android-app-development.css
@@ -161,7 +161,7 @@
 /* AndroidAppDevelopmentServices */
 
 .AndroidAppDevelopmentServices {
-    margin: 60px 0px;
+    /* margin: 60px 0px; */
 }
 
 .AndroidAppDevelopmentServices h1 {
@@ -182,7 +182,7 @@
 
 @media screen and (max-width: 750px) {
     .AndroidAppDevelopmentServices {
-        margin: 30px 0px;
+        /* margin: 30px 0px; */
     }
 
     .AndroidAppDevelopmentServices h1 {
@@ -363,7 +363,7 @@
     }
 
     .AndroidApplicationDevelopmentServices-flex-contend a {
-        font-size: 10px;
+        font-size: 13px;
         padding: 8px 0px;
     }
 
