--- a/app/(path_begins)/business-card-design/businesscard.scss
+++ b/app/(path_begins)/business-card-design/businesscard.scss
@@ -189,7 +189,7 @@ p {
     border-radius: 10px 10px 10px 10px;
     box-shadow: 0px 0px 10px 0px rgba(216, 214, 214, 0.7);
     text-align: center;
-    height: 290px;
+    height: 320px;
     margin-top: 20px;
     -webkit-transition: 0.4s;
     transition: 0.4s;
@@ -298,7 +298,7 @@ p {
         }
     }
     .justcard .profess h2,
-    .justcard .profess p {
+    .justcard .profess{
         max-width: 100%;
     }
     .justcard .profess h2,
