--- a/app/(path_begins)/content-writing-service/contentwriting.scss
+++ b/app/(path_begins)/content-writing-service/contentwriting.scss
@@ -49,7 +49,7 @@ h2 {
     background: #fff;
 }
 .content-marketing {
-    padding-top: 60px;
+    // padding-top: 60px;
 
     h3 {
         color: #1e1666;
@@ -99,7 +99,7 @@ h2 {
         border: 2px solid #fff;
         padding: 30px;
         margin-top: 30px;
-        height: 210px;
+        // height: 210px;
         img {
             filter: brightness(0) invert(1) !important;
         }
@@ -280,7 +280,7 @@ h2 {
     .the-benifit {
         .benifitbox {
             padding: 10px;
-            height: 190px;
+            // height: 190px;
         }
         h3 {
             font-size: 16px;
