Home page redesign completed

--- a/style/home/home.scss
+++ b/style/home/home.scss
@@ -46,4 +46,28 @@
 
 
 
+@media screen and (max-width:768px){
+// .WebDesigning-Images img {
+//     display: none;
+// }
+
+// tab button display none:
+// .custom-tab-button {
+//     display: none !important;
+// }
+
+// that industry we serve below icon:
+.industries-serve-main {
+    display: none !important;
+}
+
+// .industries-container.container{
+//     display: none;
+// }
     
+// footer icon
+.MuiBox-root.css-14yb472 {
+    display: none;
+}
+
+}
