--- a/style/WebDesigningSection.css
+++ b/style/WebDesigningSection.css
@@ -55,8 +55,10 @@
 }
 
 .slide-para{
-    font-size: 16px;
-    line-height: 1.5;
+    font-size: 22px;
+    line-height: 1.6;
+    color: #444444;
+    font-weight: 400;
 }
 
 .solution-section h3 {
@@ -77,6 +79,9 @@
     margin-bottom: 50px;
 }
 
+.web-sec-h3{
+    color: #262250;
+}
 
 /*counter*/
 .counter-title {
@@ -102,11 +107,11 @@
 }
 
 .our-full-site{
-    padding-top: 60px;
+    padding-top: 80px;
 }
 
 .our-full-site h2{
-    font-size: 30px;
+    font-size: 64px;
     text-align: center;
     color: var(--color262250);
     font-weight: var(--weight600);
@@ -116,6 +121,7 @@
     color: var(--color999999);
     font-size: 16px;
     text-align: center;
+    padding-top: 18px;
 }
 
 .scroll-stack-container {
@@ -164,7 +170,7 @@
 
 .scroll-stack-container h3 {
     font-size: 48px;
-    margin-bottom: 1rem;
+    margin-bottom: 40px;
 }
 
 .scroll-stack-container h6 {
@@ -238,6 +244,33 @@
         padding: 0;
     }
 
+    .our-full-site{
+        display: none;
+    }
+
+    .WebDesigning-Images h6 {
+        margin-top: 14px;
+        font-size: 22px;
+        line-height: 1.5;
+        font-weight: 400;
+    }
+
+    .mobile-grid .slick-slide img {
+    display: block;
+    }
+
+    .our-full-site h2{
+    font-size: 20px !important;
+    }
+
+    .industries-container.container {
+        margin-top: 30px;
+    }
+
+    .industries-container.container h3{
+        font-size: 20px;
+    }
+
     .web-main-sec{
         display: none;
     }
@@ -254,8 +287,6 @@
         display: none;
     }
 
-
-
     .Counter-section {
         margin-top: 0px;
     }
@@ -263,12 +294,11 @@
     .mobilephp-web-dev {
         display: block;
         margin-top: 40px;
+        padding-bottom: 40px;
     }
 
     .webdesigning-section {
         padding: 150px 23px;
-        /* margin-left: 0;
-        margin-right: 0; */
     }
 
     .row {
@@ -296,6 +326,8 @@
 
     .WebDesigning-Images-section1 h3 {
         color: #253B7A;
+        font-weight: 500;
+        font-size: 32px;
     }
 
     .WebDesigning-Images-section1 h6 {
